Fix navbar navigation issues on mobile Fix budget add-row-button width on mobile

--- a/src/main/webapp/resources/css/budget.css
+++ b/src/main/webapp/resources/css/budget.css
@@ -63,4 +63,8 @@ td {
 	hr {
 		margin-bottom: 0px;
 	}
+	
+	#addRowButton {
+	   width: 200px;
+	}
 }
